chore: add readme instructions

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ layout: home
 
 
 <header class="site-header">
-  <h1>Launch Weeks</h1>
+  <h1>🚀 Launch Weeks</h1>
   <p>Tracking past and upcoming launch weeks across the dev tools space</p>
   <p><a href="/guide">📔 The Launch Weeks Guide</a></p>
   <p><a href="/">+ Add your launch week</a></p>
